--- a/user/admin-dash.html
+++ b/user/admin-dash.html
@@ -50,10 +50,10 @@
           <label class="logo">Recruiter</label>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active ">
-              <a class="nav-link" href="./home.html">Home</a>
+              <a class="nav-link" href="list-job.html">View Jobs</a>
             </li>
-            <li >
-                <a class="text-white" href="./postjob/postjob.html">Post Job</a>
+            <li class="nav-item active ">
+                <a class="nav-link" href="postjob.html">Post Job</a>
               </li>
           </ul>
 
@@ -70,7 +70,7 @@
                 <ul class="navbar-nav ml-auto">
     
                   <li class="nav-item">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a class="nav-link btn-white" href=#>Profile</a>
+                    <a class="nav-link btn-white" href="home.html">Logout</a>
                   </li>
                 </ul>
               </div>
