--- a/user/list-job.html
+++ b/user/list-job.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </div>
-  <script src="./restapi/list-job-api.js"></script>
+  <script src="./restapi/listjob-api.js"></script>
 </body>
 
 </html>
