created JobSeeker frontenf

--- a/user/view-job.html
+++ b/user/view-job.html
@@ -34,9 +34,9 @@
         <table class="table table-bordered" id="tableDetails">
             <thead>
                 <tr>
-                    <th scope="row">Job #</th>
-                    <th scope="row">Job Title</th>
-                    <th scope="row">Description</th>
+                    <th scope="col">Job id</th>
+                    <th scope="col">Job Title</th>
+                    <th scope="col">Description</th>
                     <th scope="col">Location</th>
                     <th scope="col">Industry</th>
                     <th scope="col">Qualification</th>
