--- a/user/admin-dash.html
+++ b/user/admin-dash.html
@@ -16,6 +16,7 @@
     <style>
         .bg-blue {
       background-color: blue;
+      height: 80px;
     }
 
     .navbar-nav .nav-link {
@@ -34,7 +35,7 @@
       font-size: 35px;
       line-height: 80px;
       padding: 0 1px;
-      font-weight: bold;
+      font-weight: normal;
     }
 
     .navbar-nav .nav-item.active .nav-link {
@@ -79,7 +80,7 @@
                 <div class="alert alert-danger" role="alert" id="errMsg">
                 </div>
             </div>
-        <div class="row"  align="center">
+        <div class="row d-flex justify-content-center "  align="center">
             <h3 style="color: green;">Welcome to Admin</h3>
             <div class="row">
               <div class="col-sm-6">
