--- a/user/signup.html
+++ b/user/signup.html
@@ -11,11 +11,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>SignUp</title>
     <style>
         .bg-blue {
       background-color: blue;
+      height: 80px;
     }
 
     .navbar-nav .nav-link {
@@ -34,7 +37,7 @@
       font-size: 35px;
       line-height: 80px;
       padding: 0 1px;
-      font-weight: bold;
+      font-weight: normal;
     }
 
     .navbar-nav .nav-item.active .nav-link {
@@ -50,11 +53,6 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-blue">
         <div class="container-fluid">
           <label class="logo">Job Portal</label>
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active ">
-              <a class="nav-link" href="home.html">Home</a>
-            </li>
-          </ul>
           <ul>
             <li style="display: inline-block;padding: 20px;">
     
@@ -66,9 +64,12 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a class="nav-link btn-white ms-2" href="home.html"><i class="fa fa-fw fa-home"></i> Home</a>
+                  </li>
     
                   <li class="nav-item">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <a class="nav-link btn-white" href="login.html">Login</a>
+                    <a class="nav-link btn-white ms-2" href="login.html"><i class="fa fa-fw fa-user"></i>Login</a>
                   </li>
                 </ul>
               </div>
@@ -110,7 +111,7 @@
                 <select class="form-select" aria-label="Default select example" name="role" required>
                     <option selected>Select Role</option>
                     <option value="admin">Admin</option>
-                    <option value="user">User</option>
+                    <option value="user">Job Seeker</option>
                 </select>
             </div>
             <div><br></div>
