--- a/user/home.html
+++ b/user/home.html
@@ -5,7 +5,12 @@
   <meta charset="ISO-8859-1">
   <title>Job-portal</title>
   <style>
-  
+  body {
+  background-image: url('job.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
     .bg-blue {
       background-color: blue;
       height: 80px;
@@ -20,6 +25,7 @@
       color: blue;
       /* You can add a color for the text on the buttons */
       border: 5s;
+      
     }
 
     label.logo {
