--- a/user/admin-dash.html
+++ b/user/admin-dash.html
@@ -14,6 +14,12 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Login</title>
     <style>
+        body {
+  background-image: url('job.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
         .bg-blue {
       background-color: blue;
       height: 80px;
