--- a/user/signup.html
+++ b/user/signup.html
@@ -16,6 +16,12 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>SignUp</title>
     <style>
+        body {
+  background-image: url('job.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
         .bg-blue {
       background-color: blue;
       height: 80px;
@@ -43,6 +49,11 @@
     .navbar-nav .nav-item.active .nav-link {
       color: white;
     }
+    #formSignup label {
+    font-family: Verdana, sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    } 
   </style>
 
 </head>
